# Simple-Truss-Calculator

./: .flake8  .gitignore  .travis.yml  DrawingImprovement.py  README.md  TrussCalc_v1.2.py  TrussCalc_v1.3.py  TrussCalc_v1.4.py  TrussShape.SLDPRT  Truss_Calculator.py  Truss_Calculator.spec  _drawing_improvement.py  hello-world.lua  lcov.info  license  proplot_style.mplstyle  readme.md  requirements.txt  sdc_steel_cantilever.json  setup.cfg  test_TrussCalc.py  trussopt.py
.github/workflows/: .travis.yml  main.yml
Examples/: _import_helper.py  example.py
GitHub Media/: requirements.txt  setup.cfg
Media/References/Original Docs/: TrussCalc_v0.py
References/Original Docs/: SDC.doc
Saved Trusses/: bridge.json  my_first_truss.json  my_truss.json  sdc_steel_cantilever.json  testing.json
Source/: Truss_Calculator.py  __test_trussCalc.py  test_TrussCalc.py  test_truss.py  truss.py  utils.py
Source/Saved Trusses/: sdc_steel_cantilever.json
Source/tests/: __init__.py  conftest.py
other stuff/: install_for_opt.bat  install_for_opt.sh  trussopt.py
outputs/: my_first_truss.json  sdc_steel_cantilever.json
saved/: sdc_steel_cantilever.json
src/: truss.py  utils.py  utils_truss.py
src/tests/: __init__.py  conftest.py  lcov.info  test_complete_examples.py  test_truss.py
