[metadata]

name = Simple Truss Calculator
author = Lorcan Nicholls
author_email = lnick2440@gmail.com
url = https://github.com/lorcan2440/Simple-Truss-Calculator
long_description = file: readme.md
long_description_content_type = text/markdown

license = MIT
license_file = license
platform = any
keywords = truss, calculator, simple, python
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Calculators
project_urls = 
    Bug Tracker = https://github.com/lorcan2440/Simple-Truss-Calculator/issues


[flake8]

# Fits comfortably on VSCode with 1920x1080 display
max-line-length = 112

# E128: Under-indented line continuation
ignore = E128

exclude = References/, .git, **/__pycache__/, _import_helper.py

doctests = True
disable-noqa = False
show-source = False
statistics = False
